--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -4,48 +4,23 @@ body
 		margin: 0px;
 		padding: 0px;
 	}
+
 @font-face
-	{
-		font-family: 'Shrikhand'
-		src: url(Projet3/Shrikhand-Regular.otf) format('opentype')
-	}
-.accueil
-	{
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-
-	}
-.accueil a
-	{
-		display: none;
-	}
-ul
-	{
-		list-style-type: none;
-		display: flex;
-	}
-
-
-
-
-
-
-
-
-
-@media all and (max-width: 480px)
-{
-	@font-face
 	{
 		font-family: 'Shrikhand';
 		src: url(Projet3/Shrikhand-Regular.otf) format('opentype');
 	}
-	@font-face
+@font-face
 	{
-		font-family: 'Roboto';
-		src: url(Projet3/Roboto-Light.ttf) format('truetype');
+		font-family: 'roboto';
+		src: url(Projet3/Roboto-Regular.ttf) format('truetype');
 	}
+	
+
+
+
+
+
 	body
 	{
 		width: auto;
@@ -53,13 +28,22 @@ ul
 		padding: 0px;
 		
 	}
-	body h1, body h2, body h3
+	body h1
 	{
 		font-family: 'Shrikhand';
+	}
+	body h2, body h3
+	{
+		font-family: 'Roboto'
 	}
 	.reservation p
 	{
 		font-family: 'Roboto';
+	}
+	#logo i
+	{
+		font-size: 20px;
+    	margin-left: 20px;
 	}
 	
 	header img
@@ -67,6 +51,7 @@ ul
 		display: flex;
 		justify-content: center;
 		padding-left: 80px;
+		margin-top: -27px;
 	}
 	nav
 	{
@@ -125,6 +110,7 @@ ul
 	.fonctionnement h1, .restaurant h1
 	{
 		padding-left: 30px;
+		padding-top: 10px;
 	}
 	.menu
 	{
@@ -161,9 +147,47 @@ ul
 	}
 	figure.images
 	{
-		border-radius: 15px 15px 15px 15px;
     	background-color: white;
-    	margin: 20px;
+    	margin: 0px;
+	}
+	figure.images img
+	{
+		width: 100%;
+	}
+	.compo_menu h1
+	{
+	    margin-left: 20px;
+	    padding-top: 25px;
+	    font-size: 30px;
+	}
+	.compo_menu i
+	{
+		padding-left: 60px;
+	    font-size: 27px;
+	    font-weight: normal;
+	}
+	ul
+	{
+		list-style-type: none;
+	}
+	.plats li
+	{
+		width: 92%;
+		box-shadow: 3px 3px 0px -4px;
+	    border-radius: 15px;
+	    background-color: white;
+	    padding: 1px 2px 8px 10px;
+	    margin-bottom: 10px;
+	}
+	.plats h3
+	{
+		line-height: 0;
+	}
+	.plats h2
+	{
+	    margin-left: 30px;
+	    margin-top: 30px;
+	    padding-top: 10px;
 	}
 	figcaption h3
 	{
@@ -187,5 +211,14 @@ ul
 	{
 		width: 120px;
 	}
-
+section.compo_menu
+{
+	background-color: #EEE;
+    position: relative;
+    top: -80px;
+    border-radius: 40px;
 }
+
+	
+
+
