--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,33 +1,21 @@
-body
+	body
 	{
-		width: 90%;
+		width: 100%;
 		margin: 0px;
 		padding: 0px;
+		background-color: #EEE;
 	}
-
-@font-face
+	@font-face
 	{
 		font-family: 'Shrikhand';
 		src: url(Projet3/Shrikhand-Regular.otf) format('opentype');
 	}
-@font-face
+	@font-face
 	{
 		font-family: 'roboto';
-		src: url(Projet3/Roboto-Regular.ttf) format('truetype');
+		src: url(Projet3/Roboto-Regular.ttf) format('TrueType');
 	}
 	
-
-
-
-
-
-	body
-	{
-		width: auto;
-		margin: 0px;
-		padding: 0px;
-		
-	}
 	body h1
 	{
 		font-family: 'Shrikhand';
@@ -40,18 +28,31 @@ body
 	{
 		font-family: 'Roboto';
 	}
+	#logo
+	{
+		margin-top: 0.3rem;
+	}
+	#logo h1
+	{
+		text-align: center;
+		margin: 10px;
+		background-color: white;
+	}
+	#logo p
+	{
+		margin: 0.8rem;
+	}
 	#logo i
 	{
 		font-size: 20px;
     	margin-left: 20px;
 	}
+
 	
-	header img
+	#logo img
 	{
-		display: flex;
-		justify-content: center;
-		padding-left: 80px;
-		margin-top: -27px;
+		width: 35%;
+		padding-left: 85px;
 	}
 	nav
 	{
@@ -64,59 +65,57 @@ body
 		border: solid rgb(222,222,222);
 	    margin: 0;
 	    background-color: rgb(222,222,222);
-	    height: 30px;
-	    text-align: center;
-	    padding-top: 10px;
-	    box-shadow: magenta;
+	    padding: 6px;
 	    box-shadow: 3px -1px 5px 0px rgb(26 24 24 / 75%);
-	    font-size: 20px;
+	    font-size: 15px;
 	    font-family: 'Roboto';
 	}
 	.localisation i
 	{
-		font-size: 18px;
-    	padding: 0px 15px 0 0px;
+		font-size: 13px;
+    	padding: 1px 15px 0 0px;
 	}
 	.reservation h1
 	{
-	    font-size: 28px;
-	    display: flex;
-	    padding: 25px 46px 0 55px;
+		text-align: center;
+	    font-size: 20px;
+	    padding: 35px 46px 0 55px;
+	    margin: 0;
 	}
 	.decouverte
 	{
-		font-size: 20px;
+		font-size: 16px;
 		text-align: center;
+	}
+	.contenu
+	{
+		background-color: #EEE;
+		padding-bottom: 55px;
+	}
+	.rest
+	{
+		
 	}
 	.reservation button
 	{
-	    display: flex;
-	    height: 45px;
 	    border-radius: 25px;
-	    align-items: center;
-	    margin-left: 73px;
-	    padding: 0px 20px 0px 20px;
-	    background-color: #EEE;
-	    width: 195px;
 	    color: white;
-	    font-size: 13px;
+	    margin-left: 73px;
+	    padding: 13px 20px 13px 20px;
+	    background: -webkit-linear-gradient(top, #FF79DA, #9356DC);
+		background: -moz-linear-gradient(bottom, #FF79DA, #9356DC);
+		background: -o-linear-gradient(bottom, #FF79DA, #9356DC);
+		background: linear-gradient(to bottom, #FF79DA, #9356DC);
 	    border: 1px solid rgb(222,222,222);
-	}
-	.reservation
-	{
-		background-color: rgb(222,222,222);
-    	padding: 0px 0 60px 0;
 	}
 	.fonctionnement h1, .restaurant h1
 	{
 		padding-left: 30px;
 		padding-top: 10px;
+		font-size: 1.3rem;
 	}
 	.menu
 	{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
 		padding: 10px;
 		margin-left: 20px;
 	}
@@ -126,18 +125,23 @@ body
 	}
 	.menu button
 	{
-		border-radius: 15px;
-    	width: 240px;
-    	height: 55px;
+		border-radius: 1.5rem;
+    	width: 80%;
+    	font-size: 0.9rem;
+    	padding: 5px;
 	}
 	.menu i
 	{
-		padding: 15px;
+		padding: 15px 15px 15px 0;
 	}
 	.restaurant
 	{
 		background-color: #EEE;
 		padding-bottom: 2px;
+	}
+	.fonctionnement
+	{
+		background-color: white;
 	}
 	.restaurant img
 	{
@@ -148,36 +152,127 @@ body
 	figure.images
 	{
     	background-color: white;
-    	margin: 0px;
+    	margin: 0px 17px 0 17px;
+    	border-radius: 25px;
+    	position: relative;
 	}
-	figure.images img
+	figure.images img 
+	{
+	    width: 100%;
+	    height: 160px;
+	    margin-top: 0px;
+	}
+	figcaption
+	{
+		padding-left: 15px;
+	}
+	figcaption a
+	{
+		text-decoration: none;
+	}
+	figure.images i
+	{
+		font-weight: normal;
+		position: absolute;
+		right: 1.5rem;
+	}
+	footer.pied
+	{
+		background-color: black;
+		color: white;
+		position: relative;
+		margin-top: 1px;
+	}
+	footer h1
+	{
+		font-size: 1.5rem;
+		margin: 0;
+	}
+	footer i
+	{
+		margin-right: 0.6rem;
+	}
+	footer li
+	{
+		line-height: 2;
+	}
+
+
+
+	#logo a
+	{
+		text-decoration: none;
+	}
+	figure.images1
+	{
+		background-color: white;
+    	margin: 0;
+	}
+
+	figure.images1 img
 	{
 		width: 100%;
+	    height: 280px;
+    	margin-top: -5px;
+    	position: relative;
 	}
-	.compo_menu h1
+
+	.compo_menu h1, .compo_menu2 h1
 	{
+		position: relative;
 	    margin-left: 20px;
 	    padding-top: 25px;
-	    font-size: 30px;
+	    font-size: 25px;
 	}
-	.compo_menu i
+	.compo_menu i, .compo_menu2 i
 	{
-		padding-left: 60px;
-	    font-size: 27px;
+		position: absolute;
+		right: 2rem;
+	    font-size: 23px;
 	    font-weight: normal;
+
+	}
+	.compo_menu i:hover, .compo_menu i:hover
+	{
+	    font-weight: -webkit-linear-gradient(top, #FF79DA, #9356DC);
+		font-weight: -moz-linear-gradient(bottom, #FF79DA, #9356DC);
+		font-weight: -o-linear-gradient(bottom, #FF79DA, #9356DC);
+		font-weight:  linear-gradient(to bottom, #FF79DA, #9356DC);
+		border:none;
 	}
 	ul
 	{
 		list-style-type: none;
 	}
+	.plats ul
+	{
+		margin-left: -1.5rem;
+	}
+	
+	.plats strong
+	{
+		position: absolute;
+		right: 2rem;
+		top: 2.5rem;
+	}
 	.plats li
 	{
 		width: 92%;
-		box-shadow: 3px 3px 0px -4px;
+		box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
+		-webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
+		-moz-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
 	    border-radius: 15px;
 	    background-color: white;
 	    padding: 1px 2px 8px 10px;
 	    margin-bottom: 10px;
+	    position: relative;
+	    overflow: hidden;
+	    text-overflow: ellipsis;
+	}
+	.liste i
+	{
+		right: -1rem;
+		top: 3.5rem;
 	}
 	.plats h3
 	{
@@ -185,40 +280,86 @@ body
 	}
 	.plats h2
 	{
+		font-size: 20px;
 	    margin-left: 30px;
 	    margin-top: 30px;
 	    padding-top: 10px;
+	    border-bottom: 4px #99E2D0 solid;
+	    padding-bottom: 7px;
+	    width: 3.3rem;
 	}
-	figcaption h3
+	.commande
 	{
-		padding: 0px 0px 0px 15px;
+		display: flex;
+		justify-content: center;
+		margin-bottom: 3rem;
+    	margin-top: 3rem;
 	}
-	figcaption i
+	.principal
 	{
-		padding-left: 90px;
+		box-shadow: -2px 3px 9px 0px rgba(0,0,0,0.37);
+		-webkit-box-shadow: -2px 3px 9px 0px rgba(0,0,0,0.37);
+		-moz-box-shadow: -2px 3px 9px 0px rgba(0,0,0,0.37);
 	}
-	figcaption p
+	.principal:hover
 	{
-		padding: 0px 0px 0px 15px;
+		box-shadow: -2px 6px 9px 0px rgba(0,0,0,0.37);
+		-webkit-box-shadow: -2px 6px 9px 0px rgba(0,0,0,0.37);
+		-moz-box-shadow: -2px 6px 9px 0px rgba(0,0,0,0.37);
+		background: rgb(147,86,220);
+		background: linear-gradient(0deg, rgba(147,86,220,1) 0%, rgba(255,108,212,1) 53%);
 	}
 	footer
 	{
+		height: 200px;
 		background-color: black;
 		color: white;
-		padding: 10px 0px 0px 30px;
+		padding: 25px 0px 0px 30px;
+	    position: relative;
+    	margin-top: -50px;
 	}
 	footer img
 	{
 		width: 120px;
 	}
-section.compo_menu
-{
-	background-color: #EEE;
-    position: relative;
-    top: -80px;
-    border-radius: 40px;
-}
+	footer ul
+	{
+		margin-left: -3rem;
+	}
+	section.compo_menu
+	{
+		background-color: #EEE;
+	    position: relative;
+	    top: -80px;
+	    border-radius: 40px 40px 0 0;
+	}
+	.compo_menu button, .compo_menu2 button
+	{
+		width: 45%;
+	    padding: 1rem;
+	    border-radius: 2rem;
+	    background: -webkit-linear-gradient(top, #FF79DA, #9356DC);
+		background: -moz-linear-gradient(bottom, #FF79DA, #9356DC);
+		background: -o-linear-gradient(bottom, #FF79DA, #9356DC);
+		background: linear-gradient(to bottom, #FF79DA, #9356DC);
+	    color: white;
+	    border-width: 0;
+	}
 
+
+
+	figcaption p
+	{
+		margin-top: -1.5rem;
+		line-height: 2.5;
+	}
+	section.compo_menu2
+	{
+		background-color: #EEE;
+	    position: relative;
+	    top: -115px;
+	    border-radius: 40px 40px 0 0;
+	}
 	
 
 
