--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -192,6 +192,62 @@
 	{
 		line-height: 2;
 	}
+	.chargement
+	{
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		background-color: white;
+
+	}
+	.loader
+	{
+
+    	width: 100px;
+		height: 100px;
+		margin: auto;
+		border: 10px solid gray;
+		border-radius: 50%;
+		border-bottom: 10px solid blue;
+		border-top: 10px solid pink;
+		position: absolute;
+		animation: loader 2s linear infinite both;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+	}
+	@keyframes loader{
+		0%{
+			transform: rotate(0deg);
+		}
+
+		100%{
+			
+			transform : rotate(360deg);
+			
+		}
+	}
+	.main
+		{
+			animation: main 0s 2.15s linear both;  
+		}
+	@keyframes main
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
 
 
 
