--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -125,6 +125,8 @@
     	width: 80%;
     	font-size: 0.9rem;
     	padding: 5px;
+		display: flex;
+		justify-content: space-around;
 	}
 	.menu i
 	{
@@ -518,23 +520,99 @@
 
 	@media screen and (min-width: 480px) and (max-width: 768px)
 	{
-		nav 
-		{
-			display: flex;
-			
-		}
 		ul
 		{
 			display: flex;
 		}
-		#logo
+		.head
 		{
 			display: flex;
+			justify-content: center;
 		}
-		.restaurant
+		p.localisation
+		{
+			font-size: 1.2rem;
+		}
+		.localisation i
+		{
+			font-size: 1.1rem;
+		}
+		.reservation h1
+		{
+			font-size: 1.5rem;
+		}
+		.contenu p 
+		{
+			font-size: 1rem;
+		}
+		.reservation button
+		{
+			font-size: 1rem;
+			margin-top: 20px;
+		}
+		.menu button
+		{
+			font-size: 0.83rem;
+    		width: 100%;
+			border-radius: 1rem;
+		}
+		.groupe_menu
 		{
 			display: flex;
+			
 		}
+		.menu {
+			padding: 0px;
+			margin-left: 10px;
+		}
+		.menu i
+		{
+			padding: 17px 7px 0px 35px;
+		}
+		.rest
+		{
+			display: flex;
+			justify-content: center;
+		}
+		.groupe_images
+		{
+			display: flex;
+    		flex-wrap: wrap;
+			justify-content: space-around;
+		}
+		figure.images
+		{
+			width: 43%;
+			margin: 0px 15px 20px 15px;
+		}
+		.fonctionnement h1, .restaurant h1
+		{
+			display: flex;
+			justify-content: center;
+			font-size: 1.5rem;
+		}
+
+		.fonctionnement.menu
+		{
+			display: flex;
+			justify-content: space-around;
+		}
+		.pied li 
+		{
+			padding-right: 3.2rem;
+		}
+		footer h1
+		{
+			font-size: 1.7rem;
+		}
+		footer
+		{
+			height: 150px;
+		}
+	}
+	@media screen and (min-width:768px)
+	{
+
 	}
 
 
