--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -8,25 +8,21 @@
 	@font-face
 	{
 		font-family: 'Shrikhand';
-		src: url(Projet3/Shrikhand-Regular.otf) format('opentype');
+		src: url(Shrikhand-Regular.otf) format('opentype');
 	}
 	@font-face
 	{
 		font-family: 'roboto';
-		src: url(Projet3/Roboto-Regular.ttf) format('TrueType');
+		src: url(roboto-2014/Roboto-Regular.ttf) format('TrueType');
 	}
-	
-	body h1
+
+	body
 	{
-		font-family: 'Shrikhand';
-	}
-	body h2, body h3
-	{
-		font-family: 'Roboto'
+		font-family: 'roboto';
 	}
 	.reservation p
 	{
-		font-family: 'Roboto';
+		font-family: 'roboto';
 	}
 	#logo
 	{
@@ -37,6 +33,7 @@
 		text-align: center;
 		margin: 10px;
 		background-color: white;
+		font-family: 'Shrikhand';
 	}
 	#logo p
 	{
@@ -167,6 +164,7 @@
 	figcaption a
 	{
 		text-decoration: none;
+		color: black;
 	}
 	figure.images i
 	{
@@ -185,6 +183,7 @@
 	{
 		font-size: 1.5rem;
 		margin: 0;
+		font-family: 'Shrikhand';
 	}
 	footer i
 	{
@@ -217,7 +216,7 @@
 		border-bottom: 10px solid blue;
 		border-top: 10px solid pink;
 		position: absolute;
-		animation: loader 2s linear infinite;
+		animation: loader 2s linear;
 		top: 0;
 		bottom: 0;
 		right: 0;
@@ -227,10 +226,22 @@
 		0%{
 			transform: rotate(0deg);
 		}
+		20%{
+			transform: rotate(90deg);
+		}
+		40%{
+			transform: rotate(180deg);
+		}
+		80%{
+			transform: rotate(270deg);
+
+		}
 
 		100%{
 			
 			transform : rotate(360deg);
+			opacity: 0;
+			transform: translateX(-9999px) ;
 			
 		}
 	}
@@ -610,9 +621,113 @@
 			height: 150px;
 		}
 	}
-	@media screen and (min-width:768px)
+	@media screen and (min-width:769px)
 	{
+		#logo h1
+		{
+			font-size: 2.5rem;
+		}
+		p.localisation
+		{
+			font-size: 1.3rem;
+		}
+		.localisation i
+		{
+			font-size: 1.2rem;
+		}
+		.reservation h1
+		{
+			font-size: 1.7rem;
+		}
+		.decouverte
+		{
+			font-size: 1.3rem;
+			margin-top: .4rem;
+		}
+		.rest
+		{
+			display: flex;
+			justify-content: center;
+		}
+		.reservation button
+		{
+			font-size: 1.3rem;
+		}
+		.fonctionnement, .restaurant
+		{
+			text-align: center;
+		}
+		.fonctionnement h1, .restaurant h1
+		{
+			font-size: 1.7rem;
+		}
+		.groupe_menu
+		{
+			width: auto;
+			display: flex;
+			justify-content: space-around;
 
+		}
+		.menu
+		{
+			width: 80%;
+		}
+		.menu i 
+		{
+			padding: 20px 20px 0px 25px;
+		}
+		.menu p
+		{
+			font-size: 1.1rem;
+		}
+		.groupe_images
+		{
+			width: auto;
+			display: flex;
+			justify-content: space-around;
+		}
+		figure.images
+		{
+			width: 33%;
+			margin-bottom: 20px;
+		}
+		figcaption h3
+		{
+			margin-right: 2rem;
+		}
+		figcaption p 
+		{
+			margin-right: 5rem;
+		}
+		figcaption a
+		{
+			font-size: 1rem;
+
+		}
+		figure.images i
+		{
+			right: 1rem;
+			font-size: 1rem;
+			bottom: 3.2rem;
+		}
+		footer h1
+		{
+			margin-left: 2rem;
+			font-size: 2rem;
+		}
+		footer ul
+		{
+			display: flex;
+    		justify-content: space-around;
+		}
+		footer li
+		{
+			font-size: 1.2rem;
+		}
+		footer
+		{
+			height: 130px;
+		}
 	}
 
 
