--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -43,13 +43,14 @@
 	{
 		font-size: 20px;
     	margin-left: 20px;
+		color: black;
 	}
 
 	
 	#logo img
 	{
-		width: 35%;
-		padding-left: 85px;
+		width: 50%;
+    	padding-left: 50px
 	}
 	nav
 	{
@@ -81,7 +82,7 @@
 	}
 	.decouverte
 	{
-		font-size: 16px;
+		font-size: 17px;
 		text-align: center;
 	}
 	.contenu
@@ -109,32 +110,40 @@
 	}
 	.chiffre
 	{
-		width: 7%;
+		width: 6%;
 		padding: 1%;
 		border-radius: 50%;
 		background-color: #9356DC;
-		margin-left: -24px;
+		margin-left: -2rem;
 		display: flex;
 		justify-content: center;
 		margin-top: 0.8rem;
+		color: white;
 	}
 	.menu
 	{
 		padding: 10px;
-		margin-left: 20px;
+		margin-left: 1rem;
+    	margin-right: -1.5rem;
 	}
 	.menu p
 	{
 		margin: 15px;
+		font-size: medium;
+		font-weight: 600;
 	}
 	.menu button
 	{
 		border-radius: 1.5rem;
-    	width: 80%;
+    	width: 90%;
     	font-size: 0.9rem;
-    	padding: 5px;
+    	padding: 10px;
+		box-shadow: -7px 6px 15px -11px rgb(20 17 9 / 87%);
+    	-webkit-box-shadow: -7px 6px 15px -11px rgb(20 17 9 / 87%);
+    	-moz-box-shadow: -7px 6px 15px -11px rgba(20,17,9,0.87);
 		display: flex;
 		justify-content: space-around;
+		border: none;
 	}
 	.groupe_menu .menu:hover
 	{
@@ -142,8 +151,9 @@
 	}
 	.menu i
 	{
-		padding: 15px 15px 15px 0;
+		padding: 15px 0px 0px 15px;
 		color: grey;
+		font-size: larger;
 	}
 	.restaurant
 	{
@@ -172,6 +182,19 @@
 	    width: 100%;
 	    height: 160px;
 	    margin-top: 0px;
+		object-fit: cover;
+	}
+	.nouveau
+	{
+		width: 23%;
+		padding: 5px;
+		text-align: center;
+		position: absolute;
+		right: 13px;
+		top: 13px;
+		border: none;
+		background-color: #99E2D0;
+		color: seagreen;
 	}
 	figcaption
 	{
@@ -294,6 +317,7 @@
 		width: 100%;
 	    height: 280px;
     	margin-top: -5px;
+		object-fit: cover;
     	position: relative;
 	}
 
@@ -303,6 +327,7 @@
 	    margin-left: 20px;
 	    padding-top: 25px;
 	    font-size: 25px;
+		font-family: 'Shrikhand';
 	}
 	.compo_menu i, .compo_menu2 i
 	{
@@ -550,7 +575,11 @@
 
 	@media screen and (min-width: 480px) and (max-width: 768px)
 	{
-		ul
+		#logo h1
+		{
+			font-size: 3.5rem;
+		}
+		footer ul
 		{
 			display: flex;
 		}
@@ -561,34 +590,33 @@
 		}
 		p.localisation
 		{
-			font-size: 1.2rem;
+			font-size: 1.7rem;
 		}
-		.localisation i
-		{
-			font-size: 1.1rem;
-		}
-		.reservation h1
+		.localisation i, .contenu p
 		{
 			font-size: 1.5rem;
 		}
-		.contenu p 
+		.reservation h1
 		{
-			font-size: 1rem;
+			font-size: 1.8rem;
 		}
 		.reservation button
 		{
-			font-size: 1rem;
+			font-size: 1.5rem;
+			padding: 1.5rem;
 			margin-top: 20px;
 		}
 		.menu button
 		{
-			font-size: 0.83rem;
-    		width: 100%;
-			border-radius: 1rem;
+			font-size: 1.2rem;
+			width: 94%;
+			border-radius: 2rem;
 		}
 		.groupe_menu
 		{
+			width: 100%;
 			display: flex;
+			justify-content: space-around;
 			
 		}
 		.menu {
@@ -598,6 +626,13 @@
 		.menu i
 		{
 			padding: 17px 7px 0px 35px;
+			font-size: 1.6rem;
+		}
+		.chiffre
+		{
+			width: 14%;
+			padding: 3%;
+			margin-left: -20px;
 		}
 		.rest
 		{
@@ -615,11 +650,19 @@
 			width: 43%;
 			margin: 0px 15px 20px 15px;
 		}
+		figcaption h3
+		{
+			font-size: 1.5rem;
+		}
+		figcaption P
+		{
+			font-size: 1.3rem;
+		}
 		.fonctionnement h1, .restaurant h1
 		{
 			display: flex;
 			justify-content: center;
-			font-size: 1.5rem;
+			font-size: 1.8rem;
 		}
 
 		.fonctionnement.menu
@@ -633,11 +676,11 @@
 		}
 		footer h1
 		{
-			font-size: 1.7rem;
+			font-size: 2.5rem;
 		}
 		footer
 		{
-			height: 150px;
+			font-size: 1.5rem;
 		}
 
 
@@ -660,6 +703,7 @@
 		.compo_menu h1, .compo_menu2 h1 
 		{
 			font-size: 30px;
+			margin-left: 50px;
 		}
 		.compo_menu i, .compo_menu2 i 
 		{
@@ -670,19 +714,30 @@
 			font-size: 25px;
 			border-bottom: 6px #99E2D0 solid;
 			width: 3.5rem;
+			margin-left: 50px;
 		}
 		.plats ul 
 		{
-			display: flex;
-			justify-content: space-around;
+			margin-left: 0;
+		}
+		.liste
+		{
+			font-size: 1.3rem;
 		}
 		.plats li 
 		{
-			width: 80%;
+			width: 60%;
 			height: 6rem;
 			margin-bottom: 20px;
-			margin-left: 50px;
+			margin-left: 3px;
 		}
+		.compo_menu button, .compo_menu2 button 
+		{
+			width: 40%;
+    		padding: 1.5rem;
+			font-size: 1.5rem;
+		}
+
 	}
 	@media screen and (min-width:769px)
 	{
@@ -726,16 +781,16 @@
 		}
 		.chiffre
 		{
-			width: 15%;
+			width: 8%;
 			padding: 1%;
 			border-radius: 50%;
 			background-color: #9356DC;
-			margin-left: -13px;
+			margin-left: -20px;
 			display: flex;
 			justify-content: center;
 			margin-top: 1.4rem;
-	}
 		}
+		
 		.groupe_menu
 		{
 			width: auto;
@@ -750,6 +805,14 @@
 		.menu button
 		{
 			width: auto;
+		}
+		.menu button:hover 
+		{
+			background-color: rgb(239, 226, 248);
+		}
+		.menu button:hover i 
+		{
+			color: #9356DC;
 		}
 		.menu i 
 		{
