--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -110,17 +110,18 @@
 		padding: 1%;
 		border-radius: 50%;
 		background-color: #9356DC;
-		margin-left: -2rem;
+		margin-left: -1rem;
+		position: absolute;
+		left: 2rem;
 		display: flex;
 		justify-content: center;
-		margin-top: 0.8rem;
+		margin-top: 1.3rem;
 		color: white;
 	}
 	.menu
 	{
 		padding: 10px;
 		margin-left: 1rem;
-    	margin-right: -1.5rem;
 	}
 	.menu p
 	{
@@ -132,13 +133,15 @@
 	{
 		border-radius: 1.5rem;
     	width: 90%;
-    	font-size: 0.9rem;
-    	padding: 10px;
+    	font-size: 1rem;
+		font-weight: 700;
+    	padding: 20px;
 		box-shadow: -7px 6px 15px -11px rgb(20 17 9 / 87%);
     	-webkit-box-shadow: -7px 6px 15px -11px rgb(20 17 9 / 87%);
     	-moz-box-shadow: -7px 6px 15px -11px rgba(20,17,9,0.87);
 		display: flex;
 		justify-content: space-around;
+		align-items: center;
 		border: none;
 	}
 	.groupe_menu .menu:hover
@@ -147,7 +150,7 @@
 	}
 	.menu i
 	{
-		padding: 15px 0px 0px 15px;
+		padding: 8px 0px 8px 0px;;
 		color: grey;
 		font-size: larger;
 	}
@@ -176,7 +179,7 @@
 	figure.images img 
 	{
 	    width: 100%;
-	    height: 160px;
+	    height: 145px;
 	    margin-top: 0px;
 		object-fit: cover;
 	}
@@ -255,13 +258,86 @@
 		border-bottom: 10px solid blue;
 		border-top: 10px solid pink;
 		position: absolute;
+		-webkit-animation: loader 2s linear both ;
+		-moz-animation: loader 2s linear both;
+		-o-animation: loader 2s linear both;
 		animation: loader 2s linear both;
 		top: 0;
 		bottom: 0;
 		right: 0;
 		left: 0;
 	}
-	@keyframes loader{
+	@-webkit-keyframes loader{
+		0%{
+			transform: rotate(0deg);
+		}
+		20%{
+			transform: rotate(90deg);
+		}
+		40%{
+			transform: rotate(180deg);
+		}
+		80%{
+			transform: rotate(270deg);
+
+		}
+
+		100%{
+			
+			transform : rotate(360deg);
+			opacity: 0;
+			transform: translateX(-9999px) ;
+			
+		}
+	}
+	@-moz-keyframes loader{
+		0%{
+			transform: rotate(0deg);
+		}
+		20%{
+			transform: rotate(90deg);
+		}
+		40%{
+			transform: rotate(180deg);
+		}
+		80%{
+			transform: rotate(270deg);
+
+		}
+
+		100%{
+			
+			transform : rotate(360deg);
+			opacity: 0;
+			transform: translateX(-9999px) ;
+			
+		}
+	}
+	@-o-keyframes loader{
+		0%{
+			transform: rotate(0deg);
+		}
+		20%{
+			transform: rotate(90deg);
+		}
+		40%{
+			transform: rotate(180deg);
+		}
+		80%{
+			transform: rotate(270deg);
+
+		}
+
+		100%{
+			
+			transform : rotate(360deg);
+			opacity: 0;
+			transform: translateX(-9999px) ;
+			
+		}
+	}
+	@keyframes loader
+	{
 		0%{
 			transform: rotate(0deg);
 		}
@@ -287,9 +363,49 @@
 	.main
 		{
 			width: 100%;
+			-webkit-animation: main 0s 2.15s linear both;
+			-moz-animation: main 0s 2.15s linear both;
+			-o-animation: main 0s 2.15s linear both;
 			animation: main 0s 2.15s linear both;  
 		}
+
 	@keyframes main
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-webkit-keyframes main
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-moz-keyframes main
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-o-keyframes main
 	{
 		0%{
 			transform: translateX(-200px);
@@ -342,10 +458,6 @@
 	}
 	.compo_menu i:hover, .compo_menu2 i:hover
 	{
-	    font-weight: -webkit-linear-gradient(top, #FF79DA, #9356DC);
-		font-weight: -moz-linear-gradient(bottom, #FF79DA, #9356DC);
-		font-weight: -o-linear-gradient(bottom, #FF79DA, #9356DC);
-		font-weight:  linear-gradient(to bottom, #FF79DA, #9356DC);
 		border:none;
 	}
 	.like.compo_menu2 i
@@ -370,7 +482,7 @@
 	}
 	.plats li
 	{
-		width: 92%;
+		width: 90%;
 		box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
 		-webkit-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
 		-moz-box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.37);
@@ -395,37 +507,63 @@
 		align-items: center;
 		justify-content: center;
 		font-weight: 900;
+		-webkit-transform: translateX(100%);
+		-moz-transition: translateX(100%);
+		-o-transform: translateX(100%);
 		transform: translateX(100%);
+		-webkit-transition: transform 0.5s ease-in-out;
+		-moz-transition: transform 0.5s ease-in-out;
+		-o-transition: transform 0.5s ease-in-out;
 		transition: transform 0.5s ease-in-out;
 		
 	}
 	.liste:hover+.liste__icone
 	{
-		
+		-webkit-transform: translateX(0%);
+		-moz-transform: translateX(0%);
+		-o-transform: translateX(0%);
 		transform: translateX(0%);
 	}
 
 	.liste__icone i
 	{
+		-webkit-transform: rotate(-360deg);
+		-moz-transform: rotate(-360deg);
+		-o-transform: rotate(-360deg);
 		transform: rotate(-360deg);
+		-webkit-transition: transform 0.5s ease-in-out;
+		-moz-transition: transform 0.5s ease-in-out;
+		-o-transition: transform 0.5s ease-in-out;
 		transition: transform 0.5s ease-in-out;
 	}
 	.liste:hover+.liste__icone i
 	{
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
 	.liste strong
 	{
+		-webkit-transform: translateX(0%);
+		-moz-transform: translateX(0%);
+		-o-transform: translateX(0%);
 		transform: translateX(0%);
+		-webkit-transition: transform 0.5s ease-in-out;
+		-moz-transition: transform 0.5s ease-in-out;
+		-o-transition: transform 0.5s ease-in-out;
 		transition: transform 0.5s ease-in-out;
 	}
 	.liste:hover strong
 	{
-		transform: translateX(-300%);
+		-webkit-transform: translateX(-100px);
+		-moz-transform: translateX(-100px);
+		-o-transform: translateX(-100px);
+		transform: translateX(-100px);
 	}
 	.liste:hover p
 	{
-		width: 60%;
+		width: 40%;
 	}
 	
 	.liste p
@@ -523,6 +661,42 @@
 	    top: -115px;
 	    border-radius: 40px 40px 0 0;
 	}
+	@-webkit-keyframes mon_entree
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-moz-keyframes mon_entree
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-o-keyframes mon_entree
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
 	@keyframes mon_entree
 	{
 		0%{
@@ -537,8 +711,50 @@
 	}
 	.plats__entrees
 	{
+		-webkit-animation: mon_entree 2s ease-in-out;
+		-moz-animation: mon_entree 2s ease-in-out;
+		-o-animation: mon_entree 2s ease-in-out;
 		animation: mon_entree 2s ease-in-out;
+		-webkit-animation-iteration-count: 1;
+		-moz-animation-iteration-count: 1;
+		-o-animation-iteration-count: 1;
 		animation-iteration-count: 1;
+	}
+	@-webkit-keyframes plats_princ
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-moz-keyframes plats_princ
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-o-keyframes plats_princ
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
 	}
 	@keyframes plats_princ
 	{
@@ -554,8 +770,50 @@
 	}
 	.plats__princ
 	{
+		-webkit-animation: plats_princ 2s 2.15s  both;
+		-moz-animation: plats_princ 2s 2.15s  both;
+		-o-animation: plats_princ 2s 2.15s  both;
 		animation: plats_princ 2s 2.15s  both;
+		-webkit-animation-iteration-count: 1;
+		-moz-animation-iteration-count: 1;
+		-o-animation-iteration-count: 1;
 		animation-iteration-count: 1;
+	}
+	@-webkit-keyframes plats_dess
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-moz-keyframes plats_dess
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
+	}
+	@-o-keyframes plats_dess
+	{
+		0%{
+			transform: translateX(-200px);
+			opacity: 0;
+		}
+		100%{
+
+			transform: translateX(0px);
+			opacity: 1; 
+		}
 	}
 	@keyframes plats_dess
 	{
@@ -571,7 +829,13 @@
 	}
 	.plats__dess
 	{
+		-webkit-animation: plats_dess 2s 3.15s both;
+		-moz-animation: plats_dess 2s 3.15s both;
+		-o-animation: plats_dess 2s 3.15s both;
 		animation: plats_dess 2s 3.15s both;
+		-webkit-animation-iteration-count: 1;
+		-moz-animation-iteration-count: 1;
+		-o-animation-iteration-count: 1;
 		animation-iteration-count: 1;
 	}
 
@@ -653,7 +917,7 @@
 		}
 		figure.images
 		{
-			width: 43%;
+			width: 331px;
 			margin: 0px 15px 20px 15px;
 		}
 		figcaption h3
@@ -749,6 +1013,10 @@
 		}
 
 	}
+	@media screen and (min-width:481px ) and (max-with:744px)
+    {
+		
+	}
 	@media screen and (min-width:769px)
 	{
 		#logo h1
@@ -791,8 +1059,8 @@
 		}
 		.chiffre
 		{
-			width: 8%;
-			padding: 1%;
+			width: 8px;
+			padding: 8px;
 			border-radius: 50%;
 			background-color: #9356DC;
 			margin-left: -20px;
@@ -826,7 +1094,7 @@
 		}
 		.menu i 
 		{
-			padding: 20px 20px 0px 25px;
+			padding: 17px 20px 14px 16px;
 		}
 		.menu p
 		{
@@ -840,7 +1108,7 @@
 		}
 		figure.images
 		{
-			width: 33%;
+			width: 221px;
 			margin-bottom: 20px;
 		}
 		figcaption h3
@@ -909,6 +1177,10 @@
 		{
 			height: 500px;
 		}
+		.nouveau
+		{
+			width: 32%;
+		}
 		.groupe_plats.plats
 		{
 			width: 33%;
@@ -916,8 +1188,9 @@
 		}
 		.plats ul 
 		{
-			width: 100%;
+			width: 98%;
 			display: flex;
+			flex-wrap: wrap;
 		}
 		.plats li 
 		{
